// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-password Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  labelOnTop: true,
  tooltip: 'Tooltip message'
}: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--password mg-input--readonly">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  value: 'blu'
}: 1`] = `
<mg-input-password value="blu">
  <mock:shadow-root>
    <div class="mg-input mg-input--password mg-input--readonly">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong>
          •••
        </strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message'
}: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <div class="mg-input mg-input--password">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="" id="identifier" name="identifier" type="password">
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message',
  labelOnTop: true
}: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--password">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
        <mg-icon icon="info-circle"></mg-icon>
      </mg-tooltip>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="" id="identifier" name="identifier" type="password">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args { label: 'label', identifier: 'identifier' }: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <div class="mg-input mg-input--password">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="" id="identifier" name="identifier" type="password">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args { label: 'label', identifier: 'identifier', labelHide: true }: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <div class="mg-input mg-input--password">
      <mg-input-title class="sr-only" identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="" id="identifier" name="identifier" type="password">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args { label: 'label', identifier: 'identifier', labelOnTop: true }: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--password">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="" id="identifier" name="identifier" type="password">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args { label: 'label', identifier: 'identifier', readonly: true }: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <div class="mg-input mg-input--password mg-input--readonly">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should trigger events 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <div class="mg-input mg-input--password">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="identifier-help-text" id="identifier" name="identifier" type="password">
        </div>
        <div class="mg-input__input-container__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;
